# CMake

./: README.md
L1 - BuildingWithCMake/: Readme.txt
L2 - FirstCMakeListsFile/: CMakeLists.txt  main.cpp
cmakeTest/: CMakeLists.txt  main.cpp
cmakeTest/lib/math/: CMakeLists.txt  operations.cpp  operations.hpp
